--- a/apps/logistics-frontend/Pages/Shared/Components/GenericDropdown.razor
+++ b/apps/logistics-frontend/Pages/Shared/Components/GenericDropdown.razor
@@ -1,30 +1,39 @@
 @using System.Linq.Expressions
 @typeparam TItem
 
-<InputSelect 
-    TValue="Guid"
-    class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm 
-        focus:outline-none focus:ring-2 focus:ring-blue-500 
-        focus:border-blue-500 text-sm text-gray-800"
-    @bind-Value="SelectedId">
+<div class="form-group">
+    <InputSelect 
+        TValue="Guid"
+        class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm 
+            focus:outline-none focus:ring-2 focus:ring-blue-500 
+            focus:border-blue-500 text-sm text-gray-800"
+        Value="@SelectedId"
+        ValueChanged="SelectedIdChanged"
+        ValueExpression="SelectedIdExpression">
 
-    <option disabled value="@Guid.Empty">-- @Placeholder --</option>
-    @if (Items != null)
-    {
-        @foreach (var item in Items)
+        <option disabled value="@Guid.Empty">-- @Placeholder --</option>
+        @if (Items != null)
         {
-            <option value="@GetValue(item)">
-                @GetLabel(item)
-            </option>
+            @foreach (var item in Items)
+            {
+                <option value="@GetValue(item)">
+                    @GetLabel(item)
+                </option>
+            }
         }
-    }
-</InputSelect>
+    </InputSelect>
+
+    <ValidationMessage For="SelectedIdExpression!" class="text-red-600 text-sm mt-1"/>
+</div>
 
 @code {
     [Parameter] public List<TItem> Items { get; set; } = new();
     [Parameter] public Func<TItem, Guid> GetValue { get; set; } = default!;
     [Parameter] public Func<TItem, string> GetLabel { get; set; } = default!;
+
     [Parameter] public Guid SelectedId { get; set; }
     [Parameter] public EventCallback<Guid> SelectedIdChanged { get; set; }
+    [Parameter] public Expression<Func<Guid>>? SelectedIdExpression { get; set; }
+
     [Parameter] public string Placeholder { get; set; } = "Select an option";
 }
